fixed the text align of about text

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -18,11 +18,13 @@
   }
 
   &__text{
+    text-align: center;
     letter-spacing: px2rem(0.7);
     font-size: 1rem;
     line-height: 1.5;
 
     @include breakpoint-up(medium){
+      text-align: justify;
       font-size: $font-lg;
     }
   }
